# kirpich-ai-core

./: .gitignore  README.md
kaic-project/: .gitignore  PROJECT_STATE.md  README.md
kaic-project/experiments/kaic_terminal_alpha/: Cargo.toml  kaic.toml
kaic-project/experiments/kaic_terminal_alpha/src/: chat.rs  config.rs  engine.rs  logger.rs  main.rs
kaic-project/experiments/llama_cpp_smoke/: Cargo.toml
kaic-project/experiments/llama_cpp_smoke/src/: main.rs
kaic-project/kaic-backend/: Cargo.toml
kaic-project/kaic-backend/config/: capability_registry.example.yaml  resource_registry.example.yaml
kaic-project/kaic-backend/src/: capability_registry.rs  control_center_api.rs  embedded_backend.rs  main.rs  model_backend.rs  resource_registry.rs  router.rs  scheduler.rs  task_store.rs
kaic-project/kaic-ui/: index.html  package.json  vite.config.ts
kaic-project/kaic-ui/electron/: main.js
kaic-project/kaic-ui/src/: App.css  App.tsx  main.tsx  statusLabels.ts  types.ts
kaic-project/kaic-ui/src/api/: controlCenter.ts
kaic-project/kaic-ui/src/components/: DetailsPanel.tsx  Header.tsx  StatusBar.tsx  TaskList.tsx  Workspace.tsx
